--- a/css/main.css
+++ b/css/main.css
@@ -159,7 +159,13 @@ footer{
   top: 300px;
 }
 
+.modal-class{
+  background-color: #000;
+}
 
+.color-box{
+  background-color: #a9a9a9;
+}
 
 
 @media (max-width:768px){
