--- a/css/main.css
+++ b/css/main.css
@@ -19,6 +19,7 @@
 
 .header {
   height: 100px;
+  padding: 20px 80px;
 }
 
 .form-registerer{
@@ -30,7 +31,7 @@
   transform: translateY(50%);
 }
 
- .mobile{
+ .mobile {
   transform: translateY(100%);
 }
 
